--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.0.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "table": "^6.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
